# failure-driven-loop

./: .gitignore  CHANGELOG.md  CONTRACTS.md  CONTRIBUTING.md  LICENSE  LOOP_EXPLANATION.md  PROGRESS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TRIAL_FEEDBACK.md  TRIAL_GUIDE.md  TRIAL_SETUP.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  docs_confusion.md  feature_request.md
.github/workflows/: ci.yml
docs/: EXAMPLES.md  QUICK_START.md
examples/minimal/: README.md  TC-UT-001_naming_violation.py
examples/minimal/requirements/: SW-REQ-001.md
examples/minimal/tests/unit/: test_auth.py
failure_driven_loop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
failure_loop/: __init__.py  skill_update_suggestions.md
failure_loop/logs/: feedback.jsonl
failure_loop/skills/: SKILL.md
skills/feedback_tracker/: SKILL.md  skill_update_suggestions.md
skills/feedback_tracker/logs/: feedback.jsonl
skills/feedback_tracker/scripts/: analyze_patterns.py  log_feedback.py
skills/gap_visualizer/scripts/: tree_analyzer.py
skills/traceability_enforcer/: SKILL.md
skills/traceability_enforcer/scripts/: validate_links.py  validate_naming.py
tests/: TC-UT-001_verification.py
